.antlr/regexParser.java
// Generated from /Users/mateusz/Documents/Wlasne/studia/kompilatory/regex/regex.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class regexParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, Quoted=61, BlockQuoted=62, EscapeChar=63, NewLine=64, CarriageReturn=65, 
		Tab=66, Backslash=67, Dot=68, DecimalDigit=69, NotDecimalDigit=70, NotNewLine=71, 
		NewLineSequence=72, WhiteSpace=73, NotWhiteSpace=74, WordChar=75, NotWordChar=76, 
		CharacterClassStart=77, CharacterClassEnd=78, Caret=79, Hyphen=80, QuestionMark=81, 
		Plus=82, Star=83, OpenBrace=84, CloseBrace=85, Comma=86, WordBoundary=87, 
		NonWordBoundary=88, EndOfSubjectOrLine=89, Pipe=90, OpenParen=91, CloseParen=92, 
		LessThan=93, GreaterThan=94, SingleQuote=95, Underscore=96, Colon=97, 
		Hash=98, Equals=99, Exclamation=100, Ampersand=101, OtherChar=102;
	public static final int
		RULE_parse = 0, RULE_alternation = 1, RULE_expr = 2, RULE_element = 3, 
		RULE_quantifier = 4, RULE_character_class = 5, RULE_capture = 6, RULE_non_capture = 7, 
		RULE_comment = 8, RULE_look_around = 9, RULE_atom = 10, RULE_cc_atom = 11, 
		RULE_shared_atom = 12, RULE_literal = 13, RULE_cc_literal = 14, RULE_shared_literal = 15, 
		RULE_number = 16, RULE_octal_char = 17, RULE_octal_digit = 18, RULE_digits = 19, 
		RULE_digit = 20, RULE_name = 21, RULE_alpha_nums = 22, RULE_non_close_parens = 23, 
		RULE_non_close_paren = 24, RULE_letter = 25;
	public static final String[] ruleNames = {
		"parse", "alternation", "expr", "element", "quantifier", "character_class", 
		"capture", "non_capture", "comment", "look_around", "atom", "cc_atom", 
		"shared_atom", "literal", "cc_literal", "shared_literal", "number", "octal_char", 
		"octal_digit", "digits", "digit", "name", "alpha_nums", "non_close_parens", 
		"non_close_paren", "letter"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'0'", "'1'", "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", "'9'", 
		"'a'", "'b'", "'c'", "'d'", "'e'", "'f'", "'g'", "'h'", "'i'", "'j'", 
		"'k'", "'l'", "'m'", "'n'", "'o'", "'p'", "'q'", "'r'", "'s'", "'t'", 
		"'u'", "'w'", "'x'", "'y'", "'z'", "'A'", "'B'", "'C'", "'D'", "'E'", 
		"'F'", "'G'", "'H'", "'I'", "'J'", "'K'", "'L'", "'M'", "'N'", "'O'", 
		"'P'", "'Q'", "'R'", "'S'", "'T'", "'U'", "'W'", "'X'", "'Y'", "'Z'", 
		null, null, "'\\e'", "'\\n'", "'\\r'", "'\\t'", "'\\'", "'.'", "'\\d'", 
		"'\\D'", "'\\N'", "'\\R'", "'\\s'", "'\\S'", "'\\w'", "'\\W'", "'['", 
		"']'", "'^'", "'-'", "'?'", "'+'", "'*'", "'{'", "'}'", "','", "'\\b'", 
		"'\\B'", "'$'", "'|'", "'('", "')'", "'<'", "'>'", "'''", "'_'", "':'", 
		"'#'", "'='", "'!'", "'&'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "Quoted", "BlockQuoted", "EscapeChar", "NewLine", "CarriageReturn", 
		"Tab", "Backslash", "Dot", "DecimalDigit", "NotDecimalDigit", "NotNewLine", 
		"NewLineSequence", "WhiteSpace", "NotWhiteSpace", "WordChar", "NotWordChar", 
		"CharacterClassStart", "CharacterClassEnd", "Caret", "Hyphen", "QuestionMark", 
		"Plus", "Star", "OpenBrace", "CloseBrace", "Comma", "WordBoundary", "NonWordBoundary", 
		"EndOfSubjectOrLine", "Pipe", "OpenParen", "CloseParen", "LessThan", "GreaterThan", 
		"SingleQuote", "Underscore", "Colon", "Hash", "Equals", "Exclamation", 
		"Ampersand", "OtherChar"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "regex.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public regexParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public AlternationContext alternation() {
			return getRuleContext(AlternationContext.class,0);
		}
		public TerminalNode EOF() { return getToken(regexParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			alternation();
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternationContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public AlternationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternation; }
	}

	public final AlternationContext alternation() throws RecognitionException {
		AlternationContext _localctx = new AlternationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_alternation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			expr();
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Pipe) {
				{
				{
				setState(56);
				match(Pipe);
				setState(57);
				expr();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58) | (1L << T__59) | (1L << Quoted) | (1L << BlockQuoted) | (1L << EscapeChar))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (NewLine - 64)) | (1L << (CarriageReturn - 64)) | (1L << (Tab - 64)) | (1L << (Backslash - 64)) | (1L << (Dot - 64)) | (1L << (DecimalDigit - 64)) | (1L << (NotDecimalDigit - 64)) | (1L << (NotNewLine - 64)) | (1L << (NewLineSequence - 64)) | (1L << (WhiteSpace - 64)) | (1L << (NotWhiteSpace - 64)) | (1L << (WordChar - 64)) | (1L << (NotWordChar - 64)) | (1L << (CharacterClassStart - 64)) | (1L << (CharacterClassEnd - 64)) | (1L << (Caret - 64)) | (1L << (Hyphen - 64)) | (1L << (OpenBrace - 64)) | (1L << (CloseBrace - 64)) | (1L << (Comma - 64)) | (1L << (WordBoundary - 64)) | (1L << (NonWordBoundary - 64)) | (1L << (EndOfSubjectOrLine - 64)) | (1L << (OpenParen - 64)) | (1L << (LessThan - 64)) | (1L << (GreaterThan - 64)) | (1L << (SingleQuote - 64)) | (1L << (Underscore - 64)) | (1L << (Colon - 64)) | (1L << (Hash - 64)) | (1L << (Equals - 64)) | (1L << (Exclamation - 64)) | (1L << (Ampersand - 64)) | (1L << (OtherChar - 64)))) != 0)) {
				{
				{
				setState(63);
				element();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_element);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			atom();
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(70);
				quantifier();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuantifierContext extends ParserRuleContext {
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public QuantifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quantifier; }
	}

	public final QuantifierContext quantifier() throws RecognitionException {
		QuantifierContext _localctx = new QuantifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_quantifier);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(QuestionMark);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				match(Plus);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				match(Star);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(76);
				match(OpenBrace);
				setState(77);
				number();
				setState(78);
				match(CloseBrace);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(80);
				match(OpenBrace);
				setState(81);
				number();
				setState(82);
				match(Comma);
				setState(83);
				match(CloseBrace);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(85);
				match(OpenBrace);
				setState(86);
				number();
				setState(87);
				match(Comma);
				setState(88);
				number();
				setState(89);
				match(CloseBrace);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Character_classContext extends ParserRuleContext {
		public TerminalNode CharacterClassEnd() { return getToken(regexParser.CharacterClassEnd, 0); }
		public TerminalNode Hyphen() { return getToken(regexParser.Hyphen, 0); }
		public List<Cc_atomContext> cc_atom() {
			return getRuleContexts(Cc_atomContext.class);
		}
		public Cc_atomContext cc_atom(int i) {
			return getRuleContext(Cc_atomContext.class,i);
		}
		public Character_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_character_class; }
	}

	public final Character_classContext character_class() throws RecognitionException {
		Character_classContext _localctx = new Character_classContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_character_class);
		int _la;
		try {
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(CharacterClassStart);
				setState(94);
				match(Caret);
				setState(95);
				match(CharacterClassEnd);
				setState(96);
				match(Hyphen);
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(97);
					cc_atom();
					}
					}
					setState(100); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58) | (1L << T__59) | (1L << Quoted) | (1L << BlockQuoted) | (1L << EscapeChar))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (NewLine - 64)) | (1L << (CarriageReturn - 64)) | (1L << (Tab - 64)) | (1L << (Backslash - 64)) | (1L << (Dot - 64)) | (1L << (DecimalDigit - 64)) | (1L << (NotDecimalDigit - 64)) | (1L << (NotNewLine - 64)) | (1L << (NewLineSequence - 64)) | (1L << (WhiteSpace - 64)) | (1L << (NotWhiteSpace - 64)) | (1L << (WordChar - 64)) | (1L << (NotWordChar - 64)) | (1L << (CharacterClassStart - 64)) | (1L << (Caret - 64)) | (1L << (Hyphen - 64)) | (1L << (QuestionMark - 64)) | (1L << (Plus - 64)) | (1L << (Star - 64)) | (1L << (OpenBrace - 64)) | (1L << (CloseBrace - 64)) | (1L << (Comma - 64)) | (1L << (WordBoundary - 64)) | (1L << (EndOfSubjectOrLine - 64)) | (1L << (Pipe - 64)) | (1L << (OpenParen - 64)) | (1L << (CloseParen - 64)) | (1L << (LessThan - 64)) | (1L << (GreaterThan - 64)) | (1L << (SingleQuote - 64)) | (1L << (Underscore - 64)) | (1L << (Colon - 64)) | (1L << (Hash - 64)) | (1L << (Equals - 64)) | (1L << (Exclamation - 64)) | (1L << (Ampersand - 64)) | (1L << (OtherChar - 64)))) != 0) );
				setState(102);
				match(CharacterClassEnd);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				match(CharacterClassStart);
				setState(105);
				match(Caret);
				setState(106);
				match(CharacterClassEnd);
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58) | (1L << T__59) | (1L << Quoted) | (1L << BlockQuoted) | (1L << EscapeChar))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (NewLine - 64)) | (1L << (CarriageReturn - 64)) | (1L << (Tab - 64)) | (1L << (Backslash - 64)) | (1L << (Dot - 64)) | (1L << (DecimalDigit - 64)) | (1L << (NotDecimalDigit - 64)) | (1L << (NotNewLine - 64)) | (1L << (NewLineSequence - 64)) | (1L << (WhiteSpace - 64)) | (1L << (NotWhiteSpace - 64)) | (1L << (WordChar - 64)) | (1L << (NotWordChar - 64)) | (1L << (CharacterClassStart - 64)) | (1L << (Caret - 64)) | (1L << (Hyphen - 64)) | (1L << (QuestionMark - 64)) | (1L << (Plus - 64)) | (1L << (Star - 64)) | (1L << (OpenBrace - 64)) | (1L << (CloseBrace - 64)) | (1L << (Comma - 64)) | (1L << (WordBoundary - 64)) | (1L << (EndOfSubjectOrLine - 64)) | (1L << (Pipe - 64)) | (1L << (OpenParen - 64)) | (1L << (CloseParen - 64)) | (1L << (LessThan - 64)) | (1L << (GreaterThan - 64)) | (1L << (SingleQuote - 64)) | (1L << (Underscore - 64)) | (1L << (Colon - 64)) | (1L << (Hash - 64)) | (1L << (Equals - 64)) | (1L << (Exclamation - 64)) | (1L << (Ampersand - 64)) | (1L << (OtherChar - 64)))) != 0)) {
					{
					{
					setState(107);
					cc_atom();
					}
					}
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(113);
				match(CharacterClassEnd);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				match(CharacterClassStart);
				setState(115);
				match(Caret);
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(116);
					cc_atom();
					}
					}
					setState(119); 
					_errHandler.sync(this);
					_la = _input.LA(1);
